<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <ScrollView
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_marginBottom="40sp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="30sp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20sp"
            android:background="@android:color/white"
            android:layout_width="280dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/new_registration_text"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/iv_profile"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="240sp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/fullname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/identity_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_identity_number"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/phone_text"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_phone"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/gender_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_gender_male"
                    android:checked="true"
                    android:text="@string/gender_male_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_gender_female"
                    android:text="@string/gender_female_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_register"
                    android:text="@string/register_text"
                    android:layout_marginEnd="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_back"
                    android:layout_marginStart="5sp"
                    android:text="@string/back_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>