<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:padding="20sp"
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:text="@string/username_text"
            android:layout_width="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_username"
            android:background="#f2f2f2"
            android:layout_width="230dp"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_password"
            android:background="#f2f2f2"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:layout_width="230dp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_login"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_register"
                android:text="@string/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>