<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_image"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_image_black_24dp"
            android:layout_width="240sp"
            android:layout_height="240sp" />
        <Button
            android:id="@+id/btn_upload_image"
            android:layout_marginTop="40sp"
            android:layout_centerHorizontal="true"
            android:text="@string/upload_text"
            android:layout_below="@id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/ll_rescue"
            android:layout_below="@id/btn_upload_image"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_get_police"
                android:layout_width="wrap_content"
                android:text="@string/police_text"
                android:layout_marginEnd="4sp"
                android:background="@drawable/corner_radius_blue"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_get_firefighter"
                android:layout_marginStart="4sp"
                android:text="@string/firefighter_text"
                android:background="@drawable/corner_radius_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_logout"
            android:layout_below="@id/ll_rescue"
            android:layout_marginTop="20sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</ScrollView>